20200506-1.five leetcode demo          2.some models add and update